--- a/WebContent/register1.html
+++ b/WebContent/register1.html
@@ -3,28 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script type="text/javascript">
+	function fun_submit() {
+		//数据监测  
+
+		//提交数据
+		var form = document.forms[0];
+		form.method = "post"; //这个地方制定的method方式，不管在表单中是get还是post，最终以这句为准
+		form.submit();
+	}
+</script>
 </head>
 <body>
-<form action="/HttpRequest/Request8" method="post">
-			姓名：<input type="text" name="username" /><br />
-			密码：<input type="text" name="password" /><br />
-			确认密码：<input type="text" name="password" /><br />
-			性别：<input type="radio" name="gander" value="男" />男
-			<input type="radio" name="gender" value="女" />女<br />
-			爱好：<input type="checkbox" name="loves" value="篮球" />篮球
-			<input type="checkbox" name="loves" value="吃饭" />吃饭
-			<input type="checkbox" name="loves" value="睡觉" />睡觉
-			<input type="checkbox" name="loves" value="聊天" />聊天
-			<br />
-			国籍：<select name="country" >
-				<option value="中国">中国</option>
-				<option value="美国">美国</option>
-				<option value="日本">日本</option>
-			</select>
-			备注：<textarea rows="5" cols="20" name="description">大神什么都没有留下啊</textarea>
-			<br/><input type="submit" name="提交" />
-			
-			
-		</form>
+	<form action="/HttpRequest/Request8" method="post">
+		姓名：<input type="text" name="username" /><br /> 密码：<input type="text"
+			name="password" /><br /> 确认密码：<input type="text" name="password" /><br />
+		性别：<input type="radio" name="gander" value="男" />男 <input
+			type="radio" name="gender" value="女" />女<br /> 爱好：<input
+			type="checkbox" name="loves" value="篮球" />篮球 <input type="checkbox"
+			name="loves" value="吃饭" />吃饭 <input type="checkbox" name="loves"
+			value="睡觉" />睡觉 <input type="checkbox" name="loves" value="聊天" />聊天
+		<br /> 国籍：<select name="country">
+			<option value="中国">中国</option>
+			<option value="美国">美国</option>
+			<option value="日本">日本</option>
+		</select> 备注：
+		<textarea rows="5" cols="20" name="description">大神什么都没有留下啊</textarea>
+		<br />
+		<!-- <input type="submit" name="提交" /> -->
+		<input type="button" value="提交" onclick="fun_submit();" />
+
+	</form>
 </body>
 </html>
